invisible title fix

--- a/blogs/skins/nifty_corners/style.css
+++ b/blogs/skins/nifty_corners/style.css
@@ -175,6 +175,7 @@ div.bTitle {
 }
 h3.bTitle {
 	margin: 0 1ex;
+	color: #fff;
 }
 h3.bTitle a {
 	color: #fff;
